# Breakout

./: CMakeLists.txt  config.txt  main.cpp
game/: Game.cpp  Game.h
game/items/: GameItem.cpp  GameItem.h  MovableGameItem.cpp  MovableGameItem.h
game/items/ball/: Ball.cpp  Ball.h
game/items/brick/: Brick.cpp  Brick.h
game/items/plate/: Plate.cpp  Plate.h
